# RSS_Fast_RTMv2

./: .gitignore  README.md  meson.build  pyproject.toml
make_tables/: amsu_constants.py  amsu_rtm.py  make_absorption_table_cld.AMSU.multiband.py  make_absorption_table_q.AMSU.multiband.f90  make_absorption_table_q.AMSU.multiband.py  test_interpolation_abs_table.py
src/: atm_rtmpy.f90  interp_abs_tablepy.f90
src/RSS_2022/: RSS_2022_ABSORPTION.F90  RSS_2022_ABSORPTIONpy.f90  goff_gratch.f90
src/rosenkranz_2017/: o2abs_19.f  o2abs_19.f90  o2abs_19py.f90
src/weighting_function/: RSS_2022_RTM_ATMOSPHERE.F90  trig_degrees.f90
test/: abs_o2_sanity_check.py  amsu_constants.py  atm_components_sanity_check.py  atm_interp_sanity_check.py  calc_atm_components_ERA5_monthly.py  msu_constants.py
